--- a/ReservationSpringMvc/src/main/webapp/resources/main.css
+++ b/ReservationSpringMvc/src/main/webapp/resources/main.css
@@ -184,12 +184,12 @@ th, td {
 }
 
 .column1 {
-  width: 33%;
+  width: 30%;
   padding-left: 40px;
 }
 
 .column2 {
-  width: 13%;
+  width: 24%;
 }
 
 .column3 {
@@ -197,7 +197,7 @@ th, td {
 }
 
 .column4 {
-  width: 19%;
+  width: 30%;
 }
 
 .column5 {
@@ -212,6 +212,7 @@ th, td {
 .table100-body td {
   padding-top: 16px;
   padding-bottom: 16px;
+  padding-left:72px;
 }
 
 /*==================================================================
@@ -243,7 +244,8 @@ th, td {
   color: #fff;
   line-height: 1.4;
 
-  background-color: #6c7ae0;
+  background: #2a77d3;
+ 
 }
 
 .table100.ver1 td {
@@ -531,4 +533,19 @@ th, td {
 
 .table100.ver5 .ps__rail-y .ps__thumb-y::before {
   background-color: #cccccc;
+}
+a.button3{
+padding:0.3em 1.2em;
+margin:0 0.3em 0.3em 0;
+border-radius:2em;
+box-sizing: border-box;
+text-decoration:none;
+font-family:'Roboto',sans-serif;
+font-weight:300;
+color:#FFFFFF;
+background-color:#4eb5f1;
+text-align:center;
+transition: all 0.2s;
+float: right;
+margin:20px;
 }
